vlib/v/checker/tests/json_decode_shared_err.vv
import json

fn main() {
	shared data := [1, 2, 3]
	rlock data {
		println(json.encode(data))
	}
}
